--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 .c-board__body {
-  height: 700px;
+  height: calc(100vh - 144px);
 }
 
 .c-category {
-  min-width: 450px;
+  min-width: 33vw;
+}
+.c-category__count {
+  position: absolute;
+  right: 14px;
+  top: 14px;
 }
 
 button {
   min-width: 70px;
+}
+
+input:focus-visible {
+  outline: none;
 }/*# sourceMappingURL=App.css.map */
